fixes overflow on last vac-section

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -248,7 +248,7 @@ button.nav-link:hover{
   transition: width 0.35s ease;
 }
 
-.imageHeader{
+.section-container{
   // height: clamp(200px, 50%, 800px);
   height: 100%;
   padding-right: 0.75rem;
